# rust-hdl

./: .gitignore  404.html  CNAME  Cargo.toml  LICENSE  README.md  changelog.html  changelog.md  guide.html  index.html  install_toolchain_notes.md  intro.html  markdown-page.html  publish.sh  references.html  roadmap.html  simulation.html  sitemap.xml
rust-hdl-bsp-alchitry-cu/: Cargo.toml
rust-hdl-bsp-alchitry-cu/src/: ice_pll.rs  lib.rs  pins.rs  synth.rs
rust-hdl-bsp-alchitry-cu/tests/: bsp_alchitry_cu_icepll.rs  bsp_alchitry_cu_pulser.rs  bsp_alchitry_cu_pulser_pll.rs  bsp_alchitry_cu_pwm.rs  bsp_alchitry_cu_pwm_vec.rs  bsp_alchitry_cu_pwm_vec_srom.rs  icepll.rs  pulser.rs  pulser_pll.rs  pwm.rs  pwm_vec.rs  pwm_vec_srom.rs
rust-hdl-bsp-icesugar-1-5/: Cargo.toml
rust-hdl-bsp-icesugar-1-5/src/: lib.rs  pins.rs  synth.rs
rust-hdl-bsp-icesugar-1-5/tests/: bsp_icesugar_1_5_pulser.rs
rust-hdl-bsp-ok-xem6010/: Cargo.toml
rust-hdl-bsp-ok-xem6010/src/: clock_buffer.rs  ddr_fifo.rs  lib.rs  ok_download_ddr.rs  pins.rs  pll.rs  serdes.rs  synth.rs
rust-hdl-bsp-ok-xem6010/tests/: blinky.rs  bsp_ok_xem6010_blinky.rs  bsp_ok_xem6010_ddr.rs  bsp_ok_xem6010_download.rs  bsp_ok_xem6010_download32.rs  bsp_ok_xem6010_fir.rs  bsp_ok_xem6010_hls_bridge.rs  bsp_ok_xem6010_i2c.rs  bsp_ok_xem6010_i2c_rs  bsp_ok_xem6010_mig.rs  bsp_ok_xem6010_mux_spi.rs  bsp_ok_xem6010_pipe_afifo.rs  bsp_ok_xem6010_pipe_bt.rs  bsp_ok_xem6010_pipe_fifo.rs  bsp_ok_xem6010_pipe_in.rs  bsp_ok_xem6010_pipe_ram.rs  bsp_ok_xem6010_pll.rs  bsp_ok_xem6010_sdram_fifo_tester.rs  bsp_ok_xem6010_soc_test.rs  bsp_ok_xem6010_spi.rs  bsp_ok_xem6010_tristate.rs  bsp_ok_xem6010_wave.rs  bsp_ok_xem6010_wire.rs  ddr.rs  download.rs  download32.rs  mig.rs  mux_spi.rs  pipe.rs  pipe_afifo.rs  pipe_bt.rs  pipe_fifo.rs  pipe_in.rs  pipe_ram.rs  pll_test.rs  serdes.rs  spi.rs  wave.rs  wire.rs
rust-hdl-bsp-ok-xem7010/: Cargo.toml
rust-hdl-bsp-ok-xem7010/src/: ddr_fifo7.rs  lib.rs  mcb_if.rs  mig7.rs  ok_download_ddr7.rs  pins.rs  synth.rs
rust-hdl-bsp-ok-xem7010/tests/: blinky.rs  bsp_ok_xem7010_blinky.rs  bsp_ok_xem7010_ddr.rs  bsp_ok_xem7010_ddr_fifo.rs  bsp_ok_xem7010_download.rs  bsp_ok_xem7010_download32.rs  bsp_ok_xem7010_fast_blinky.rs  bsp_ok_xem7010_mig.rs  bsp_ok_xem7010_mux_spi.rs  bsp_ok_xem7010_pipe.rs  bsp_ok_xem7010_pipe_afifo.rs  bsp_ok_xem7010_pipe_fifo.rs  bsp_ok_xem7010_pipe_in.rs  bsp_ok_xem7010_pipe_ram.rs  bsp_ok_xem7010_spi.rs  bsp_ok_xem7010_wave.rs  bsp_ok_xem7010_wire.rs  ddr.rs  ddr_fifo.rs  download.rs  download32.rs  fast_blinky.rs  mig.rs  mux_spi.rs  pipe.rs  pipe_afifo.rs  pipe_fifo.rs  pipe_in.rs  pipe_ram.rs  spi.rs  wave.rs  wire.rs
rust-hdl-core/: Cargo.toml  notes.md
rust-hdl-core/src/: ast.rs  atom.rs  bits.rs  bitvec.rs  block.rs  check_connected.rs  check_write_inputs.rs  clock.rs  code_writer.rs  constant.rs  constraint.rs  dff.rs  direction.rs  has_changed.rs  lib.rs  logic.rs  module_defines.rs  named_path.rs  prelude.rs  probe.rs  scoped_visitor.rs  short_bit_vec.rs  shortbitvec.rs  signal.rs  signed.rs  simulate.rs  struct_valued.rs  synth.rs  tagged.rs  type_descriptor.rs  update_all.rs  vcd_probe.rs  verilog_gen.rs  verilog_visitor.rs  visitor.rs  visitor_mut.rs  yosys.rs
rust-hdl-core/tests/: bitcast_test.rs  wrapper_test.rs
rust-hdl-fpga-support/: Cargo.toml
rust-hdl-fpga-support/src/: lib.rs
rust-hdl-hls/: Cargo.toml
rust-hdl-hls/src/: bridge.rs  bus.rs  controller.rs  fifo.rs  host.rs  lib.rs  miso_port.rs  miso_wide_port.rs  mosi_fifo_port.rs  mosi_port.rs  prelude.rs  router_rom.rs  sdram_controller.rs  sdram_controller_tester.rs  spi.rs
rust-hdl-macros/: Cargo.toml
rust-hdl-macros/src/: common.rs  connect_gen.rs  hdl_gen.rs  lib.rs  logic_block.rs  logic_interface.rs  logic_state.rs  logic_struct.rs
rust-hdl-ok/: Cargo.toml
rust-hdl-ok-core/: Cargo.toml
rust-hdl-ok-core/src/: bsp.rs  ddr_fifo7.rs  lib.rs  mcb_if.rs  ok_download_ddr7.rs  ok_host.rs  ok_pipe.rs  ok_sys_clock7.rs  ok_trigger.rs  prelude.rs  spi.rs
rust-hdl-ok-core/tests/: bsp_ok_xem6010_blinky.rs  bsp_ok_xem6010_ddr.rs  bsp_ok_xem6010_download.rs  bsp_ok_xem6010_download32.rs  bsp_ok_xem6010_fir.rs  bsp_ok_xem6010_hls_bridge.rs  bsp_ok_xem6010_i2c.rs  bsp_ok_xem6010_mig.rs  bsp_ok_xem6010_mux_spi.rs  bsp_ok_xem6010_pipe_afifo.rs  bsp_ok_xem6010_pipe_bt.rs  bsp_ok_xem6010_pipe_fifo.rs  bsp_ok_xem6010_pipe_in.rs  bsp_ok_xem6010_pipe_ram.rs  bsp_ok_xem6010_pll.rs  bsp_ok_xem6010_sdram_fifo_tester.rs  bsp_ok_xem6010_soc_test.rs  bsp_ok_xem6010_spi.rs  bsp_ok_xem6010_tristate.rs  bsp_ok_xem6010_wave.rs  bsp_ok_xem6010_wire.rs  bsp_ok_xem7010_blinky.rs  bsp_ok_xem7010_ddr.rs  bsp_ok_xem7010_ddr_fifo.rs  bsp_ok_xem7010_download.rs  bsp_ok_xem7010_download32.rs  bsp_ok_xem7010_fast_blinky.rs  bsp_ok_xem7010_mig.rs  bsp_ok_xem7010_mux_spi.rs  bsp_ok_xem7010_pipe.rs  bsp_ok_xem7010_pipe_afifo.rs  bsp_ok_xem7010_pipe_fifo.rs  bsp_ok_xem7010_pipe_in.rs  bsp_ok_xem7010_pipe_ram.rs  bsp_ok_xem7010_spi.rs  bsp_ok_xem7010_wave.rs  bsp_ok_xem7010_wire.rs
rust-hdl-ok-frontpanel-sys/: Cargo.toml  build.rs
rust-hdl-ok-frontpanel-sys/src/: bindings.rs  lib.rs
rust-hdl-ok/src/: bsp.rs  ddr_fifo.rs  lib.rs  mcb_if.rs  mig.rs  mig7.rs  ok_download.rs  ok_download_ddr.rs  ok_hi.rs  ok_host.rs  ok_pipe.rs  ok_sys_clock7.rs  ok_trigger.rs  ok_wire.rs  pins.rs  prelude.rs  spi.rs  synth.rs  synth_6010.rs  synth_7010.rs  (+3 more)
rust-hdl-pcb/: Cargo.toml
rust-hdl-pcb-core/: Cargo.toml
rust-hdl-pcb-kicad/: Cargo.toml
rust-hdl-pcb-schematic-layout-tool/: Cargo.toml  README.md  build.rs
rust-hdl-sim-chips/: Cargo.toml
rust-hdl-test/: Cargo.toml
rust-hdl-test-alchitry-cu/: Cargo.toml
rust-hdl-test-core/: Cargo.toml
rust-hdl-test-ok-common/: Cargo.toml
rust-hdl-test-ok-xem6010/: Cargo.toml
rust-hdl-test-ok-xem7010/: Cargo.toml
rust-hdl-toolchain-common/: Cargo.toml
rust-hdl-toolchain-icestorm/: Cargo.toml
rust-hdl-toolchain-ise/: Cargo.toml
rust-hdl-toolchain-vivado/: Cargo.toml
rust-hdl-widgets/: Cargo.toml
rust-hdl-x-macro-core/: Cargo.toml
rust-hdl-x-widgets/: Cargo.toml
(+1487 files in other folders)
