[workspace]

members = [
    "rust-hdl",
    "rust_hdl_lib_core",
    "rust_hdl_lib_hls",
    "rust_hdl_lib_sim",
    "rust_hdl_lib_widgets",
    "rust_hdl_lib_macros",
    "rust_hdl_lib_ok_core",
    "rust_hdl_lib_bsp_alchitry_cu",
    "rust_hdl_lib_bsp_ok_xem6010",
    "rust_hdl_lib_bsp_ok_xem7010",
    "rust_hdl_lib_fpga_support",
]
