[workspace]

members = [
    "rust-hdl",
    "rust_hdl_lib_core",
    "rust_hdl_lib_hls",
    "rust_hdl_lib_sim",
    "rust_hdl_lib_widgets",
    "rust_hdl_lib_macros",
    "rust_hdl_lib_ok_core",
    "rust_hdl_lib_fpga_support",
    "rust-hdl-bsp-alchitry-cu",
    "rust-hdl-bsp-ok-xem6010",
    "rust-hdl-bsp-ok-xem7010",
]
