[workspace]

members = [
    "rust-hdl",
    "rust-hdl-core",
    "rust-hdl-hls",
    "rust-hdl-sim",
    "rust-hdl-widgets",
    "rust-hdl-macros",
    "rust-hdl-ok-core",
    "rust-hdl-fpga-support",
    "rust-hdl-bsp-alchitry-cu",
    "rust-hdl-bsp-ok-xem6010",
    "rust-hdl-bsp-ok-xem7010",
    "rust-hdl-x",
    "rust-hdl-x-macro",
    "rust-hdl-x-macro-core",
]
