[package]
name = "rust-hdl-bsp-alchitry-cu"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Board support for the Alchitry CU module in the RustHDL crate."
homepage = "https://rusthdl.org"
repository = "https://github.com/SmithsDigitalForge/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <samit.basu@smiths.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl-core = "^0.1"
rust-hdl-yosys-synth = "^0.1"
rust-hdl-toolchain-icestorm = "^0.1"

[dev-dependencies]
rust-hdl-widgets = "^0.1"
rust-hdl-test-core = "^0.1"