[package]
name = "rust-hdl-bsp-alchitry-cu"
version = "0.9.1"
edition = "2021"
license = "MIT"
description = "Support crate for RustHDL - provides Board Support Package for the Alchitry Cu board"
homepage = "https://rusthdl.org"
repository = "https://github.com/SmithsDigitalForge/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <samit.basu@smiths.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl = {version= "^0.38.0", path="../rust-hdl"}
rust-hdl-fpga-support = {version= "^0.8.0", path="../rust-hdl-fpga-support"}
