[package]
name = "rust-hdl-bsp-alchitry-cu"
version = "0.45.0"
edition = "2021"
license = "MIT"
description = "Support crate for RustHDL - provides Board Support Package for the Alchitry Cu board"
homepage = "https://github.com/samitbasu/rust-hdl"
repository = "https://github.com/samitbasu/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <basu.samit@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl = { version = "0.45.0", path = "../rust-hdl", features = ["fpga"] }
