[package]
name = "rust-hdl-bsp-icesugar-1-5"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Support crate for RustHDL - provides Board Support Package for the ICESugar v1.5 board"
homepage = "https://github.com/samitbasu/rust-hdl"
repository = "https://github.com/samitbasu/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Xu Chang <xuxchang@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl = { version = "0.45.1", path = "../rust-hdl", features = ["fpga"] }
