[package]
name = "rust-hdl-bsp-ok-xem6010"
version = "0.44.0"
edition = "2021"
license = "MIT"
description = "Support crate for RustHDL - provides Board Support Package for the OpalKelly XEM6010 FPGA module (Spartan-6 based)"
homepage = "https://github.com/samitbasu/rust-hdl"
repository = "https://github.com/samitbasu/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <basu.samit@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl = { path = "../rust-hdl", version = "0.44.0", features = ["fpga"] }
rust-hdl-ok-core = { path = "../rust-hdl-ok-core", version = "0.44.0" }
rand = { version = "0.8.1" }

[dev-dependencies]
rust-hdl-hls = { path = "../rust-hdl-hls", version = "0.44.0" }
rust-hdl-sim = { path = "../rust-hdl-sim", version = "0.44.0" }
