[package]
name = "rust-hdl-bsp-ok-xem7010"
version = "0.8.6"
edition = "2021"
license = "MIT"
description = "Support crate for RustHDL - provides Board Support Package for the OpalKelly XEM7010 module (Artix-7 based)"
homepage = "https://rusthdl.org"
repository = "https://github.com/SmithsDigitalForge/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <samit.basu@smiths.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl = {path="../rust-hdl", version= "^0.39.0" }
rust-hdl-fpga-support = {path="../rust-hdl-fpga-support", version= "^0.8.0" }
rust-hdl-ok-core = {path="../rust-hdl-ok-core", version= "^0.10.0" }
rust-hdl-ok-frontpanel-sys = {path="../rust-hdl-ok-frontpanel-sys", version= "^0.8.0" }
rand = {version="0.8.1"}
