[package]
name = "rust_hdl_bsp_ok_xem7010"
version = "0.44.0"
edition = "2021"
license = "MIT"
description = "Support crate for RustHDL - provides Board Support Package for the OpalKelly XEM7010 module (Artix-7 based)"
homepage = "https://github.com/samitbasu/rust-hdl"
repository = "https://github.com/samitbasu/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <basu.samit@gmail>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl = { path = "../rust-hdl", version = "0.44.0", features = ["fpga"] }
rust_hdl_lib_ok_core = { path = "../rust_hdl_lib_ok_core", version = "0.44.0" }
rust_hdl_lib_ok_frontpanel_sys = { path = "../rust_hdl_lib_ok_frontpanel_sys", version = "0.44.0" }
rand = { version = "0.8.1" }
