[package]
name = "rust-hdl-bsp-ok-xem7010"
version = "0.44.0"
edition = "2021"
license = "MIT"
description = "Support crate for RustHDL - provides Board Support Package for the OpalKelly XEM7010 module (Artix-7 based)"
homepage = "https://github.com/samitbasu/rust-hdl"
repository = "https://github.com/samitbasu/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <basu.samit@gmail>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl = { path = "../rust-hdl", version = "0.44.0", features = ["fpga"] }
rust-hdl-ok-core = { path = "../rust-hdl-ok-core", version = "0.44.0" }
rust-hdl-ok-frontpanel-sys = { path = "../rust-hdl-ok-frontpanel-sys", version = "0.44.0" }
rand = { version = "0.8.1" }
