[package]
name = "rust-hdl-core"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Core components of the RustHDL crate."
homepage = "https://rusthdl.org"
repository = "https://github.com/SmithsDigitalForge/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <samit.basu@smiths.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl-macros = {path="../rust-hdl-macros"}
crossbeam = "0.8.1"
num-bigint = "0.4.0"
vcd = "0.6.1"
evalexpr = "6.3.0"
regex = "1.5.4"
