[package]
name = "rust-hdl-core"
version = "0.1.1"
edition = "2018"
license = "MIT"
description = "Core components of the RustHDL crate."
homepage = "https://rusthdl.org"
repository = "https://github.com/SmithsDigitalForge/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <samit.basu@smiths.com>"]

[dependencies]
rust-hdl-macros = "^0.1.0"
crossbeam = "0.8.1"
num-bigint = "0.4.0"
vcd = "0.6.1"
evalexpr = "6.3.0"
regex = "1.5.4"
