[package]
name = "rust-hdl-fpga-support"
version = "0.42.0"
edition = "2021"
license = "MIT"
description = "Support crate for RustHDL - provides FPGA specific code"
homepage = "https://rusthdl.org"
repository = "https://github.com/SmithsDigitalForge/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <samit.basu@smiths.com>"]

[dependencies]
rust-hdl = { version = "0.42.0", path = "../rust-hdl" }
regex = { version = "^1.6.0" }
