[package]
name = "rust-hdl-fpga-support"
version = "0.43.0"
edition = "2021"
license = "MIT"
description = "Support crate for RustHDL - provides FPGA specific code"
homepage = "https://rusthdl.org"
repository = "https://github.com/samitbasu/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <samit.basu@smiths.com>"]

[dependencies]
rust-hdl-core = { version = "0.43.0", path = "../rust-hdl-core" }
rust-hdl-widgets = { version = "0.43.0", path = "../rust-hdl-widgets" }
regex = { version = "^1.6.0" }
