[package]
name = "rust_hdl_macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
syn = {version="1.0.73", features=["full", "extra-traits", "visit"]}
quote = "1.0.9"
proc-macro2 = "1.0.27"
regex = "1.3.4"

