[package]
name = "rust-hdl-macros"
version = "0.22.0"
edition = "2018"
license = "MIT"
description = "Macro support for RustHDL"
homepage = "https://rusthdl.org"
repository = "https://github.com/SmithsDigitalForge/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <samit.basu@smiths.com>"]

[lib]
proc-macro=true

[dependencies]
syn = {version="1.0.73", features=["full", "extra-traits", "visit"]}
quote = "1.0.9"
proc-macro2 = "1.0.27"
regex = "1.3.4"

