[package]
name = "rust-hdl-ok-core"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Board support package for OpalKelly XEM6010 and XEM7010 FPGA modules"
homepage = "https://rusthdl.org"
repository = "https://github.com/SmithsDigitalForge/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <samit.basu@smiths.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl = {version= "^0.33.0", path="../rust-hdl"}
rust-hdl-fpga-support = {version= "^0.3.0", path="../rust-hdl-fpga-support"}
rust-hdl-ok-frontpanel-sys = {version= "0.3.0", path="../rust-hdl-ok-frontpanel-sys"}
regex = "1.5.4"
rand = "0.8.5"
