[package]
name = "rust-hdl-ok-frontpanel-sys"
version = "0.43.0"
edition = "2018"
license = "MIT"
description = "OpalKelly FrontPanel library wrapper for the RustHDL crate."
homepage = "https://rusthdl.org"
repository = "https://github.com/samitbasu/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <samit.basu@smiths.com>"]


links = "okFrontPanel"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "^0"
