[package]
name = "rust-hdl-pcb-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="^1", features=["derive"]}
url = {version="^2"}
num-rational = {version="0.4.0", features=["serde"]}
