[package]
name = "rust-hdl-pcb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "0.6.0"
url = "2.2.2"
lazy-static-include = "3.1.1"
csv = "1.1.6"
serde = {version="1", features=["derive"]}
serde_yaml = "^0.8"
serde_json = "^1"
rust-hdl-pcb-core = {path="../rust-hdl-pcb-core"}
rust-hdl-pcb-svg = {path="../rust-hdl-pcb-svg"}
rust-hdl-pcb-kicad = {path="../rust-hdl-pcb-kicad"}
