[package]
name = "rust-hdl-sim-chips"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Chip simulations for testing in RustHDL"
homepage = "https://rusthdl.org"
repository = "https://github.com/SmithsDigitalForge/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <samit.basu@smiths.com>"]

[dependencies]
rust-hdl-core = "^0.1"
rust-hdl-widgets = "^0.1"
rust-hdl-yosys-synth = "^0.1"
array-init = "2.0.0"