[package]
name = "rust-hdl-test-alchitry-cu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl-test-core = {path= "../rust-hdl-test-core" }
rust-hdl-core = {path="../rust-hdl-core"}
rust-hdl-bsp-alchitry-cu = {path="../rust-hdl-bsp-alchitry-cu"}
rust-hdl-widgets = {path="../rust-hdl-widgets"}
rust-hdl-yosys-synth = {path="../rust-hdl-yosys-synth"}
