[package]
name = "rust-hdl-test-core"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Test infrastructure for the RustHDL crate."
homepage = "https://rusthdl.org"
repository = "https://github.com/SmithsDigitalForge/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <samit.basu@smiths.com>"]


[dependencies]
rust-hdl = {path="../rust-hdl"}
rust-hdl-macros = {path="../rust-hdl-macros"}
rand = "0.8.5"