[package]
name = "rust-hdl-test-ok-common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl-core = {path="../rust-hdl-core"}
rust-hdl-widgets = {path="../rust-hdl-widgets"}
rust-hdl-ok-frontpanel-sys = {path="../rust-hdl-ok-frontpanel-sys"}
rust-hdl-sim-chips = {path="../rust-hdl-sim-chips"}
rust-hdl-yosys-synth = {path="../rust-hdl-yosys-synth"}
rust-hdl-ok-core = {path="../rust-hdl-ok-core"}
rust-hdl-test-core = {path="../rust-hdl-test-core"}