[package]
name = "rust-hdl-test-ok-common"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "OpalKelly FrontPanel test support components of the RustHDL crate."
homepage = "https://rusthdl.org"
repository = "https://github.com/SmithsDigitalForge/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <samit.basu@smiths.com>"]

[dependencies]
rust-hdl-core = {path="../rust-hdl-core"}
rust-hdl-widgets = {path="../rust-hdl-widgets"}
rust-hdl-ok-frontpanel-sys = {path="../rust-hdl-ok-frontpanel-sys"}
rust-hdl-sim-chips = {path="../rust-hdl-sim-chips"}
rust-hdl-yosys-synth = {path="../rust-hdl-yosys-synth"}
rust-hdl-ok-core = {path="../rust-hdl-ok-core"}
rust-hdl-test-core = {path="../rust-hdl-test-core"}
regex = "1.5.4"
rand = "0.8.4"