[package]
name = "rust-hdl-test-ok-xem6010"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl-ok-frontpanel-sys = {path="../rust-hdl-ok-frontpanel-sys"}
rust-hdl-core = {path="../rust-hdl-core"}
rust-hdl-widgets = {path="../rust-hdl-widgets"}
rust-hdl-ok-core = {path="../rust-hdl-ok-core"}
rust-hdl-bsp-ok-xem6010 = {path="../rust-hdl-bsp-ok-xem6010"}
rust-hdl-test-ok-common = {path="../rust-hdl-test-ok-common"}
