[package]
name = "rust-hdl-test-ok-xem7010"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl-ok-frontpanel-sys = {path="../rust-hdl-ok-frontpanel-sys"}
rust-hdl-core = {path="../rust-hdl-core"}
rust-hdl-widgets = {path="../rust-hdl-widgets"}
rust-hdl-bsp-ok-xem7010 = {path="../rust-hdl-bsp-ok-xem7010"}
rust-hdl-ok-core = {path="../rust-hdl-ok-core"}
