[package]
name = "rust-hdl-toolchain-common"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Common functions to support synthesis toolchains for the RustHDL crate."
homepage = "https://rusthdl.org"
repository = "https://github.com/SmithsDigitalForge/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <samit.basu@smiths.com>"]

[dependencies]
rust-hdl-core = "^0.1"