[package]
name = "rust-hdl-toolchain-icestorm"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Icestorm Synthesis support for the RustHDL crate."
homepage = "https://rusthdl.org"
repository = "https://github.com/SmithsDigitalForge/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <samit.basu@smiths.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl-core = "^0.1"