[package]
name = "rust-hdl-toolchain-ise"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl-toolchain-common = {path="../rust-hdl-toolchain-common"}
rust-hdl-core = {path="../rust-hdl-core"}
regex = "1.5.4"
