[package]
name = "rust-hdl-toolchain-vivado"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl-core = {path="../rust-hdl-core"}
rust-hdl-toolchain-common = {path="../rust-hdl-toolchain-common"}