[package]
name = "rust_hdl_widgets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_hdl_core = {path="../rust-hdl-core"}
rust_hdl_macros = {path="../rust-hdl-macros"}
rust_hdl_synth = {path="../rust-hdl-synth"}