[package]
name = "rust-hdl-widgets"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Base widgets used by RustHDL"
homepage = "https://rusthdl.org"
repository = "https://github.com/SmithsDigitalForge/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <samit.basu@smiths.com>"]

[dependencies]
rust-hdl-core = "^0.1"
rust-hdl-macros = "^0.1"
rust-hdl-yosys-synth = "^0.1"
