[package]
name = "rust-hdl-widgets"
version = "0.45.1"
edition = "2021"
license = "MIT"
description = "Write firmware for FPGAs in Rust - widget crate"
homepage = "https://rust-hdl.org"
repository = "https://github.com/samitbasu/rust-hdl"
keywords = ["fpga", "verilog", "hardware"]
authors = ["Samit Basu <basu.samit@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl-core = { version = "0.45.1", path = "../rust-hdl-core" }
array-init = "2.0.0"

[dev-dependencies]
rand = "0.8"
