[package]
name = "rust-hdl-x-macro-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
colored-diff = "0.2.3"
prettyplease = "0.2.12"
proc-macro2 = "1.0.66"
quote = "1.0.31"
syn = { version = "2.0.26", features = ["full"] }
