[package]
name = "rust-hdl-x-widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-hdl-x = { path = "../rust-hdl-x" }
rust-hdl = { path = "../rust-hdl" }
rust-hdl-x-macro = { path = "../rust-hdl-x-macro" }
